WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115962
Crash when terminating a process that has not been fully launched
https://bugs.webkit.org/show_bug.cgi?id=115962
Summary
Crash when terminating a process that has not been fully launched
Anders Carlsson
Reported
2013-05-11 10:48:36 PDT
Crash when terminating a process that has not been fully launched
Attachments
Patch
(12.61 KB, patch)
2013-05-11 10:55 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-05-11 10:55:16 PDT
Created
attachment 201463
[details]
Patch
Andreas Kling
Comment 2
2013-05-11 10:58:38 PDT
Comment on
attachment 201463
[details]
Patch is gud poch! r=me.
Anders Carlsson
Comment 3
2013-05-11 11:00:04 PDT
Committed
r149933
: <
http://trac.webkit.org/changeset/149933
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug