Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm
@@ -525,11 +525,17 @@ void ProcessLauncher::launchProcess()
 }
 
 void ProcessLauncher::terminateProcess()
-{    
+{
+    if (m_isLaunching) {
+        invalidate();
+        return;
+    }
+
     if (!m_processIdentifier)
         return;
     
     kill(m_processIdentifier, SIGKILL);
+    m_processIdentifier = 0;
 }
     
 void ProcessLauncher::platformInvalidate()
